# robotnik_msgs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  package.xml  robotnik_msgsmessage_bridge_mapping_rule.yaml
.github/: Jenkinsfile
.github/ISSUE_TEMPLATE/: standard-bug-report.yml  standard-feature-template.yml
.github/workflows/: build.yaml
action/: SetElevator.action
msg/: ActiveZone.msg  ActiveZoneArray.msg  ArmStatus.msg  AudioPlayer.msg  BatteryDockingStatus.msg  BatteryStatus.msg  BatteryStatusStamped.msg  CameraParameters.msg  ElevatorStatus.msg  InputsOutputs.msg  Interval.msg  LaserMode.msg  LaserStatus.msg  Logger.msg  MotorCurrent.msg  MotorHeadingOffset.msg  MotorInfo.msg  MotorReferenceValue.msg  MotorStatus.msg  NamedInputOutputArray.msg  OdomCalibrationStatus.msg  PantiltStatus.msg  PantiltStatusStamped.msg  RecordStatus.msg  SafetyModuleStatus.msg  SimpleSystemStatus.msg  SubState.msg  WatchdogStatus.msg  WatchdogStatusArray.msg  Zone.msg  ZoneArray.msg  alarmmonitor.msg  named_inputs_outputs.msg  ptz.msg
robotnik_interfaces/: CMakeLists.txt  package.xml
robotnik_msgs/: CMakeLists.txt  package.xml
robotnik_msgs/msg/: BatteryStatus.msg  LaserMode.msg  LaserStatus.msg  MotorReferenceValue.msg  MotorReferenceValueArray.msg  MotorStatus.msg  Register.msg  ReturnMessage.msg  RobotnikMotorsStatus.msg
robotnik_msgs/srv/: GetFloat64.srv  GetModbusRegister.srv  SetModbusRegisterBit.srv  SetNamedDigitalOutput.srv  SetOdometry.srv
robotnik_safety_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_safety_msgs/msg/: Register.msg  RegisterArray.msg
srv/: GetMotorsHeadingOffset.srv  GetMotorsInfo.srv  GetStringList.srv  LoggerQuery.srv  Record.srv  SetCurrent.srv  SetDigitalOutput.srv  SetDigitalOutputWithMask.srv  SetFloat32.srv  SetFloat64.srv  SetInt16.srv  SetModbusRegister.srv  SetRegionOfInterest.srv  SetStringList.srv  set_digital_pulse_output.srv  set_ptz.srv  set_ptz_home.srv
