<?xml version="1.0"?>
<package>
  <name>robotnik_msgs</name>
  <version>2.3.0</version>
  <description>The robotnik_msgs package. Common messages and services used by some Robotnik's packages.</description>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="jmnavarrete@robotnik.es">Juan Manuel Navarrete</maintainer>
  <maintainer email="rvasquez@robotnik.es">Robert Vásquez</maintainer>

  <license>BSD</license>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
