<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_interfaces</name>
  <version>2.2.0</version>
  <description>
    This package contains the interfaces for the Robotnik's robots.
  </description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>robotnik_safety_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
